--- a/index.html
+++ b/index.html
@@ -159,8 +159,28 @@
             }
         }
 
+        .ease-spring {
+            transition-timing-function: cubic-bezier(0.25, 1, 0.5, 1);
+        }
+
         .animate-fade-in {
-            animation: fadeIn 0.6s cubic-bezier(0.16, 1, 0.3, 1);
+            animation: fadeIn 0.8s cubic-bezier(0.25, 1, 0.5, 1) forwards;
+        }
+
+        @keyframes slideUp {
+            from {
+                opacity: 0;
+                transform: translateY(40px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        .animate-slide-up {
+            animation: slideUp 0.8s cubic-bezier(0.25, 1, 0.5, 1) forwards;
         }
 
         .animated-bg {
