--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="scroll-smooth dark overflow-hidden">
+<html lang="en" class="scroll-smooth dark">
 
 <head>
     <meta charset="UTF-8">
